@@ -18,7 +18,7 @@
 ##' require(ape)
 ##' tr <- rtree(10)
 ##' ggtree(tr) + geom_tiplab()
-geom_tiplab <- function(mapping=NULL, hjust = 0,  align = FALSE, linetype = "dotted", linesize=1, geom="text",  offset=0, ...) {
+geom_tiplab <- function(mapping=NULL, hjust = 0,  align = FALSE, linetype = "dotted", linesize=0.5, geom="text",  offset=0, ...) {
     geom <- match.arg(geom, c("text", "label"))
     if (geom == "text") {
         text_geom <- geom_text2
@@ -58,13 +58,8 @@ geom_tiplab <- function(mapping=NULL, hjust = 0,  align = FALSE, linetype = "dot
         ,
         if (show_segment)
             geom_segment2(mapping = segment_mapping,
-                          linetype = linetype,
+                          linetype = linetype, nudge_x = offset,
                           size = linesize, stat = StatTreeData, ...)
-
-            ## geom_tipsegment(mapping = segment_mapping,
-            ##                 offset = offset,
-            ##                 linetype = linetype,
-            ##                 size = linesize, ...)
     )
 }
 
@@ -99,47 +94,5 @@ geom_tiplab2 <- function(mapping=NULL, hjust=0, ...) {
          )
 }
 
-## geom_tipsegment <- function(mapping=NULL, data=NULL,
-##                             geom=GeomSegmentGGtree, position = "identity",
-##                             offset,  ...,
-##                             show.legend=NA, inherit.aes=FALSE,
-##                             na.rm=TRUE) {
-
-##     default_aes <- aes_(x=~x, y=~y)
-##     if (is.null(mapping)) {
-##         mapping <- default_aes
-##     } else {
-##         mapping <- modifyList(default_aes, mapping)
-##     }
-
-##     layer(stat=StatTipSegment,
-##           data = data,
-##           mapping = mapping,
-##           geom = geom,
-##           position = position,
-##           show.legend = show.legend,
-##           inherit.aes = inherit.aes,
-##           params = list(offset = offset,
-##                         na.rm = na.rm,
-##                         ...),
-##           check.aes = FALSE
-##           )
-## }
-
-## StatTipSegment <- ggproto("StatTipSegment", Stat,
-##                         compute_group = function(self, data, scales, params, offset) {
-##                             get_tipsegment_position(data, offset)
-##                         },
-##                         required_aes = c("x", "y")
-##                         )
-
-
-## get_tipsegment_position <- function(data, offset, adjustRatio=1/200) {
-##     adjust <- diff(range(data$x, na.rm=TRUE)) * adjustRatio
-##     xend <- data$x + adjust
-##     x <- max(data$x, na.rm = TRUE)  + offset
-##     y <- data$y
-##     data.frame(x=x, xend=xend, y=y, yend=y)
-## }
 
 
